# crawling-and-scraping

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  intra_crawler.py  prompt.md  pyproject.toml  requirements.txt  run_crawl.py  take1.py  tutorial_basic_crawl.py
crawl_output_20250629_023941/www.python.org/: content.md  links.csv  metadata.json
crawl_results/: failed_urls.csv  file_links.csv  site_structure.csv  site_summary.csv  site_tree.txt  site_tree_fancy.txt
docker_files/: bk_Dockerfile
output/20250802_142021_crawl_results/: 20250802_142021_crawl_output.csv
output/20250802_142224_crawl_results/: 20250802_142224_crawl_output.csv
output/20250802_142407_crawl_results/: 20250802_142407_crawl_output.csv
output/20250802_143121_crawl_results/: 20250802_143121_crawl_output.csv
