[project]
name            = "intra-crawler"
version         = "0.1.0"
description     = "Intranet crawler using Crawl4AI"
requires-python = ">=3.10"

# ← 依存関係は 1 つのリストにまとめる
dependencies = [
    "crawl4ai>=0.7,<0.8",
    "pandas>=2.2,<3.0",
    "httpx>=0.27,<1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["ruff>=0.6.2"]
